tests/type/errors/bad_underscore_tuple.xi
bar(): int, int { return 1, 2 }

foo() {
  _ = bar()
}
